# polynomial_benchmark

./: CMakeLists.txt  LICENSE  README.md
benchmarks/i7_4770k/gcc_8.2.0/: .directory
include/: univariate_eigen.h  univariate_xtensor.h
src/: benchmark.py  python_bindings.cpp
